# INF2004-Project-P3A

./: CMakeLists.txt  FreeRTOSConfig.h  Logs.txt  README.md  main.c  main.py
libraries/: accelerometer.py  display.py  networking.py
source/: CMakeLists.txt  blink.c  header.h  io_handler.c
source/display/: display.c
source/io/: barcodes.c  barcodes.h  blink.c  io_handler.c  line_following.c
source/motor/: motor.c  motor.h
source/networking/: dhcpserver.c  dhcpserver.h  wifi.c  wifi.h
source/sensor/: mpu6050.c  sensor.c
source/sensors/: barcodes.h  encoder.c  infrared.c  interrupt.c  sensors.h  ultrasonic.c
